// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Only last step render error style 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: 90px;
}

.emotion-2 {
  position: absolute;
  display: block;
  width: 1px;
  left: 12px;
  top: 32px;
  bottom: 8px;
  background-color: #1e6fff;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #edf4ff;
  color: #1e6fff;
}

.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

.emotion-8 {
  position: absolute;
  display: block;
  width: 1px;
  left: 12px;
  top: 32px;
  bottom: 8px;
  background-color: #ff4747;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #fee;
  color: #ff4747;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <svg
        class="emotion-4"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          SuccessIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M7.73 1.174a.75.75 0 0 1 .096 1.056l-3.75 4.5a.75.75 0 0 1-1.106.05L.72 4.53a.75.75 0 0 1 1.06-1.06l1.67 1.669 3.224-3.87a.75.75 0 0 1 1.056-.095z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-8"
    />
    <div
      class="emotion-3"
    >
      <svg
        class="emotion-4"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          SuccessIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M7.73 1.174a.75.75 0 0 1 .096 1.056l-3.75 4.5a.75.75 0 0 1-1.106.05L.72 4.53a.75.75 0 0 1 1.06-1.06l1.67 1.669 3.224-3.87a.75.75 0 0 1 1.056-.095z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        Error
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-14"
    >
      <svg
        class="emotion-4"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          CloseIcon
        </title>
        <path
          d="M1.146 1.146a.5.5 0 0 1 .708 0L4 3.293l2.146-2.147a.5.5 0 1 1 .708.708L4.707 4l2.147 2.146a.5.5 0 1 1-.708.708L4 4.707 1.854 6.854a.5.5 0 1 1-.708-.708L3.293 4 1.146 1.854a.5.5 0 0 1 0-.708z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render vertical label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: visible;
  margin-right: 16px;
  min-height: unset;
}

.emotion-2 {
  position: absolute;
  display: block;
  height: 1px;
  width: 100%;
  box-sizing: border-box;
  top: 12px;
  left: 96px;
  padding-right: 40px;
}

.emotion-2::after {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  background-color: #e5e6eb;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #1e6fff;
  color: #fff;
  margin-left: 56px;
}

.emotion-4 {
  display: block;
  text-align: center;
  width: 140px;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 8px;
  padding-right: 0;
  color: #1d2129;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #e5e6eb;
  color: #a9aeb8;
  margin-left: 56px;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      1
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Succeed
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-7"
    >
      2
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Process
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with dot variant 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: visible;
  margin-right: 16px;
  min-height: unset;
}

.emotion-2 {
  position: absolute;
  display: block;
  height: 1px;
  width: 100%;
  left: 90px;
  padding-right: 24px;
  box-sizing: border-box;
  top: 4px;
}

.emotion-2::after {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  background-color: #e5e6eb;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #1e6fff;
  color: #fff;
  margin-left: 66px;
}

.emotion-4 {
  display: block;
  text-align: center;
  width: 140px;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 0;
  color: #1d2129;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #c9cdd4;
  color: #a9aeb8;
  margin-left: 66px;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-7"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with dot variant with vertical direction 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: 90px;
}

.emotion-2 {
  position: absolute;
  display: block;
  width: 1px;
  left: 3.5px;
  top: 24px;
  bottom: 0;
  background-color: #e5e6eb;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #1e6fff;
  color: #fff;
  margin-top: 8px;
}

.emotion-4 {
  display: inline-block;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #c9cdd4;
  color: #a9aeb8;
  margin-top: 8px;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-7"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with error status 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: unset;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #fee;
  color: #ff4747;
}

.emotion-3 {
  vertical-align: middle;
}

.emotion-4 {
  display: inline-block;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        class="emotion-3"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          CloseIcon
        </title>
        <path
          d="M1.146 1.146a.5.5 0 0 1 .708 0L4 3.293l2.146-2.147a.5.5 0 1 1 .708.708L4.707 4l2.147 2.146a.5.5 0 1 1-.708.708L4 4.707 1.854 6.854a.5.5 0 1 1-.708-.708L3.293 4 1.146 1.854a.5.5 0 0 1 0-.708z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Error
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with finish status 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: unset;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #edf4ff;
  color: #1e6fff;
}

.emotion-3 {
  vertical-align: middle;
}

.emotion-4 {
  display: inline-block;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        class="emotion-3"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          SuccessIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M7.73 1.174a.75.75 0 0 1 .096 1.056l-3.75 4.5a.75.75 0 0 1-1.106.05L.72 4.53a.75.75 0 0 1 1.06-1.06l1.67 1.669 3.224-3.87a.75.75 0 0 1 1.056-.095z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Finish
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with navigation variant 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  padding-left: 20px;
  padding-right: 10px;
  margin-right: 32px;
}

.emotion-1:after {
  content: "";
  position: absolute;
  display: block;
  height: 2px;
  bottom: 0;
  left: 20px;
  right: 30px;
  background-color: #1e6fff;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #1e6fff;
  color: #fff;
}

.emotion-3 {
  display: inline-block;
  margin-bottom: 16px;
}

.emotion-4 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
  display: inline-block;
}

.emotion-4::after {
  content: "";
  position: absolute;
  display: block;
  width: 6px;
  height: 6px;
  border: 2px solid #c9cdd4;
  border-left: none;
  border-bottom: none;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 6px;
  right: 10px;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  padding-left: 20px;
  padding-right: 10px;
  margin-right: 32px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #e5e6eb;
  color: #a9aeb8;
}

.emotion-8 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      1
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-5"
  >
    <div
      class="emotion-6"
    >
      2
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-8"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with no line 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: unset;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #1e6fff;
  color: #fff;
}

.emotion-3 {
  display: inline-block;
}

.emotion-4 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      1
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        Error
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with process status 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: unset;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #1e6fff;
  color: #fff;
}

.emotion-3 {
  display: inline-block;
}

.emotion-4 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
  display: inline-block;
  position: relative;
}

.emotion-4::after {
  content: "";
  position: absolute;
  display: block;
  height: 1px;
  width: 9999px;
  left: 100%;
  top: 10px;
  background-color: #e5e6eb;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #e5e6eb;
  color: #a9aeb8;
}

.emotion-12 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      1
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        Finish
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-6"
    >
      2
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        Process
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-6"
    >
      3
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-12"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render with vertical 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: 90px;
}

.emotion-2 {
  position: absolute;
  display: block;
  width: 1px;
  left: 12px;
  top: 32px;
  bottom: 8px;
  background-color: #e5e6eb;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #1e6fff;
  color: #fff;
}

.emotion-4 {
  display: inline-block;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #e5e6eb;
  color: #a9aeb8;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      1
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-7"
    >
      2
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps with dot variant and error status should render error style 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: 90px;
}

.emotion-2 {
  position: absolute;
  display: block;
  width: 1px;
  left: 3.5px;
  top: 24px;
  bottom: 0;
  background-color: #ff4747;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #1e6fff;
  color: #1e6fff;
  margin-top: 8px;
}

.emotion-4 {
  display: inline-block;
}

.emotion-5 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

.emotion-7 {
  position: absolute;
  display: block;
  width: 1px;
  left: 3.5px;
  top: 24px;
  bottom: 0;
  background-color: #e5e6eb;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #ff4747;
  color: #ff4747;
  margin-top: 8px;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  background: #c9cdd4;
  color: #a9aeb8;
  margin-top: 8px;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-7"
    />
    <div
      class="emotion-8"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Error
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-12"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps with vertical direction and error status should render error style 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  min-height: 90px;
}

.emotion-2 {
  position: absolute;
  display: block;
  width: 1px;
  left: 12px;
  top: 32px;
  bottom: 8px;
  background-color: #ff4747;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #edf4ff;
  color: #1e6fff;
}

.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  font-weight: 500;
  line-height: 24px;
  font-size: 16px;
  margin-top: 0;
  padding-right: 16px;
  color: #1d2129;
}

.emotion-8 {
  position: absolute;
  display: block;
  width: 1px;
  left: 12px;
  top: 32px;
  bottom: 8px;
  background-color: #e5e6eb;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #fee;
  color: #ff4747;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
  margin-right: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  line-height: 24px;
  font-size: 14px;
  background: #e5e6eb;
  color: #a9aeb8;
}

<div
  class="emotion-0"
  data-testid="steps"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <svg
        class="emotion-4"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          SuccessIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M7.73 1.174a.75.75 0 0 1 .096 1.056l-3.75 4.5a.75.75 0 0 1-1.106.05L.72 4.53a.75.75 0 0 1 1.06-1.06l1.67 1.669 3.224-3.87a.75.75 0 0 1 1.056-.095z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        Succeeded
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-8"
    />
    <div
      class="emotion-9"
    >
      <svg
        class="emotion-4"
        color="currentColor"
        fill="none"
        height="12"
        viewBox="0 0 8 8"
        width="12"
      >
        <title>
          CloseIcon
        </title>
        <path
          d="M1.146 1.146a.5.5 0 0 1 .708 0L4 3.293l2.146-2.147a.5.5 0 1 1 .708.708L4.707 4l2.147 2.146a.5.5 0 1 1-.708.708L4 4.707 1.854 6.854a.5.5 0 1 1-.708-.708L3.293 4 1.146 1.854a.5.5 0 0 1 0-.708z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        Error
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-14"
    >
      3
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        Wait
      </div>
    </div>
  </div>
</div>
`;
